Fixed z-index things

--- a/src/assets/styles/player.scss
+++ b/src/assets/styles/player.scss
@@ -608,6 +608,14 @@ $romper-hover-text-size: 25px;
   position: absolute;
   top: 0;
   width: 100%;
+}
+
+.romper-start-image {
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
   z-index: 2;
 }
 
